--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # Folders and files to ignore for THIS project
 hw*/
 test*
-project1/code/__pycache__
+project1/__pycache__
 project1/output
 
 # Prerequisites
